--- a/frontend/src/pages/Search.module.css
+++ b/frontend/src/pages/Search.module.css
@@ -1,7 +1,7 @@
 /* Container principal avec un meilleur dégradé */
 .container {
   padding: 1.5rem;
-  min-height: 100vh;
+  height: calc(80vh - 80px);
   transition: all 0.5s ease;
   font-family: 'Inter', -apple-system, sans-serif;
 }
